# PRODKIT

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md
examples/configured/: main.py
examples/minimal/: main.py
src/prodkit/: __init__.py
src/prodkit/cli/: __init__.py  app.py  loader.py
src/prodkit/contracts/: plugin.py
src/prodkit/core/: config.py  context.py  doctor.py  event_bus.py  exceptions.py  lifecycle.py  plugin_manager.py  production.py  registry.py
src/prodkit/plugins/: __init__.py
src/prodkit/plugins/compression/: __init__.py
src/prodkit/plugins/cors/: __init__.py
src/prodkit/plugins/errors/: __init__.py
src/prodkit/plugins/health/: __init__.py
src/prodkit/plugins/logging/: __init__.py
src/prodkit/plugins/rate_limit/: __init__.py
src/prodkit/plugins/request_id/: __init__.py
src/prodkit/plugins/security/: __init__.py
tests/: conftest.py
tests/integration/: test_cli.py  test_logging.py  test_production.py
tests/unit/: test_config.py  test_doctor.py  test_kernel.py  test_rate_limit.py
