[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "prodkit"
version = "0.1.1"
description = "The production framework for FastAPI. One line. Production ready."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "Pushkar Pant", email = "pantpushkar4@gmail.com" }]
keywords = [
    "fastapi",
    "production",
    "middleware",
    "security",
    "observability",
    "logging",
    "health-check",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.110",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
brotli = ["brotli-asgi>=1.4"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.11",
    "import-linter>=2.0",
    "tomli>=2.0",  # so mypy (python_version=3.10) can type-check the fallback import
]

[project.urls]
Homepage = "https://github.com/Pushkarpant/PRODKIT"
Documentation = "https://github.com/Pushkarpant/PRODKIT#readme"
Repository = "https://github.com/Pushkarpant/PRODKIT"
Changelog = "https://github.com/Pushkarpant/PRODKIT/blob/main/CHANGELOG.md"
Issues = "https://github.com/Pushkarpant/PRODKIT/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/prodkit"]

[tool.hatch.build.targets.sdist]
include = ["src/prodkit", "tests", "README.md", "LICENSE", "CHANGELOG.md"]

[tool.ruff]
target-version = "py310"
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # bugbear
    "UP",   # pyupgrade
    "S",    # bandit (security)
    "N",    # pep8-naming
    "C4",   # comprehensions
    "SIM",  # simplify
    "RUF",  # ruff-specific
]
[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106"]  # asserts and test credentials are fine in tests

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["prodkit"]
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=prodkit --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
source = ["src/prodkit"]

[tool.importlinter]
root_package = "prodkit"

[[tool.importlinter.contracts]]
name = "Kernel must not depend on plugins"
type = "forbidden"
source_modules = ["prodkit.core", "prodkit.contracts"]
forbidden_modules = ["prodkit.plugins"]
